# SchemeImproved

./: CMakeLists.txt  README.md  example.si  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
.github/workflows/: codacy.yml  codeql.yml
